fixed color on close icon on mobile menu

--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -75,6 +75,7 @@
       width: 50px;
       height: 40px;
       transform: translateX(10px);
+      color: white;
     }
   }
   &__mobile {
